5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1595_2895.log
== TEST (2019-03-23 21:47:22) 
-- CODE:
var = int ( input ( " numero de jogos : "))
var : 100
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:50:36) 
-- CODE:
var = int ( input ( " numero de var : "))
float( input(" var * 100"))
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:00:53) 
-- CODE:
a = int(input(" quantidade de jogos :"))
b = float(input(" valor dos jogos : "))
c = float(input(" frete :"))
total =( a + B + C )
print(total )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total =( a + B + C )
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:01:23) 
-- CODE:
a = int(input(" quantidade de jogos :"))
b = float(input(" valor dos jogos : "))
c = float(input(" frete :"))
total =(a+B+C)
print(total )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total =(a+B+C)
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:01:46) 
-- CODE:
a = int(input(" quantidade de jogos :"))
b = float(input(" valor dos jogos : "))
c = float(input(" frete :"))
total =(a*B + C)
print(total )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total =(a*B + C)
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 22:02:17) 
-- CODE:
a = int(input(" quantidade de jogos :"))
b = float(input(" valor dos jogos : "))
c = float(input(" frete :"))
total = a*b + c
print(total )
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 22:02:29) 
-- CODE:
a = int(input(" quantidade de jogos :"))
b = float(input(" valor dos jogos : "))
c = float(input(" frete :"))
total = a*b + c
print(total )
-- EXECUTION TIME:
0.162297
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
